# pam_skf

./: CMakeLists.txt  README.md  auth.c  cJSON.c  dev_manager.c  libes_3000gm.so.1.0.1.0  pam_skf.c  pam_zcwkey.c  test.c  ukey_tool.c  util.c
doc/: readme.md  readme.txt
include/: SKFAPI.h  auth.h  cJSON.h  dev_manager.h  pam_zcwkey.h  sm3.h  util.h
sm3/: CMakeLists.txt  Makefile.bak  byteorder.h  sm3.c  sm3_hmac.c
